turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:2: error: '<-' expected but ')' found.
  for(i<1 to 90){
               ^DiskFourth:7: error: illegal start of simple expression
} 
^