turtleart.diskfourth.DiskFourth.scala.code
override def run() {
  for(i<1 to 90){
    forward(100);
    moveTo(0,0);
    right(1)
  }
}